--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Service.Business.Abstract
+@using Core.Constants
 @inject ICategoryService _categoryService
 @inject IUserService _userService
 
@@ -82,9 +83,16 @@
                             </li>
                             @if (User.Identity.IsAuthenticated)
                             {
+                                var user = await _userService.FindByClaimsAsync(User);
                                 <li>
                                     <a asp-controller="Blogs" asp-action="NewBlog">New blog</a>
                                 </li>
+                                @if (await _userService.IsInRoleAsync(user, Roles.ADMIN))
+                                {
+                                    <li>
+                                        <a asp-controller="Admin" asp-action="Index">Admin Panel</a>
+                                    </li> 
+                                }
                             }
                         </ul>
                         <!-- End Mainmanu Nav -->
